2008-08-13 Francois Suter <typo3@cobweb.ch>

	* Simplified handling of extra data

2008-08-07 Francois Suter <typo3@cobweb.ch>

	* Caught error when extension is not configured

2008-07-22 Francois Suter <typo3@cobweb.ch>

	* Corrected HTML markup error in BE module

2008-04-23 Francois Suter <typo3@cobweb.ch>

	* Automatically retrieve and store devLog call location (thanks to Kasper Ligaard)

2008-04-23 Francois Suter <typo3@cobweb.ch>

	* Added various selection options for cleaning up log entries
	* Removed htmlspecialchars() call on log message (suggested by Ingo Renner)

2008-04-15 Francois Suter <typo3@cobweb.ch>

	* Added a log run browser in single log run view (thanks to Rupert Germann)
	* Added a checkbox to automatically expand all extra data (thanks to Rupert Germann)
	* Added extension configuration options

2008-04-07 Francois Suter <typo3@cobweb.ch>

	* Increased size of database field for extra data
	* Added the possibility of viewing the deserialised extra data
	* Added the possibility of viewing all entries and paginating through them
	* Added filters on status and extension keys
	* Added display of the crdate column (thanks to Stefano Cecere)
	* Cleaned up part of the code
	* Totally revamped manual

2005-01-02

	* Last version of cc_devlog by Rene Fritz