@@ -1,3 +1,7 @@
+2008-08-22 Francois Suter <typo3@cobweb.ch>
+
+	* Added log search feature
+
 2008-08-13 Francois Suter <typo3@cobweb.ch>
 
 	* Simplified handling of extra data
